# job_application_agent

./: .env.example  .gitignore  README.md  pyproject.toml
apply_agent/: main.py  resume.py
