[project]
name = "apply-to-job-agent"
version = "0.1.0"
description = "A simple agno agent that applies to a job, tailored to your resume."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.14",
    "mcp>=1.27.2",
    "openai>=2.41.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
apply-agent = "apply_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["apply_agent"]
